feedback triggering into agent flow working

--- a/demo-ui/index.html
+++ b/demo-ui/index.html
@@ -42,7 +42,7 @@
       <h2>Share Your Feedback</h2>
       <p>We'd love to hear your thoughts on how we can improve!</p>
       <form id="feedback-form" method="dialog">
-        <textarea id="feedback-text" placeholder="Your feedback here..." required></textarea>
+        <textarea id="feedback-text" placeholder="Your feedback here..." required>I clicked the button, but no GIF was shown. The UI said there was some kind of error</textarea>
         <div class="dialog-buttons">
           <button type="button" id="cancel-feedback">Cancel</button>
           <button type="submit" id="submit-feedback">Submit</button>
